--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   flick_video_player: ^0.8.0
   video_player: ^2.8.6
+ 
+
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +71,7 @@ flutter:
     - assets/img/games/triangle/
     - assets/img/background/
     - assets/video/tutorials/
+   
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -93,6 +96,14 @@ flutter:
     - family: MooLahLah
       fonts:
         - asset: fonts/MooLahLah-Regular.ttf
+
+    - family: Lobster
+      fonts:
+        - asset: fonts/Lobster-Regular.ttf
+
+    - family: Gorditas
+      fonts:
+        - asset: fonts/Gorditas-Bold.ttf
 
   #   - family: Schyler
   #     fonts:
